--- a/immersionFruitBowl/test-output/index.html
+++ b/immersionFruitBowl/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Acer\AppData\Local\Temp\testng-eclipse-215525639\testng-customsuite.xml</span>
+                    <span>C:\Users\Acer\AppData\Local\Temp\testng-eclipse--1901509601\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">9 methods,   9 passed</span>
+                    <span class="method-stats">7 methods,   7 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,21 +102,6 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="test.FruitBowlTest" class="method navigator-link" hash-for-method="segregateApples">segregateApples</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="test.FruitBowlTest" class="method navigator-link" hash-for-method="segregateBananas">segregateBananas</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="test.FruitBowlTest" class="method navigator-link" hash-for-method="segregateOranges">segregateOranges</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="test.FruitBowlTest" class="method navigator-link" hash-for-method="verifyAppleBowl">verifyAppleBowl</a> <!-- method navigator-link -->
@@ -144,6 +129,11 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="test.FruitBowlTest" class="method navigator-link" hash-for-method="verifyFruitBowl">verifyFruitBowl</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="test.FruitBowlTest" class="method navigator-link" hash-for-method="verifyOrangeBowl">verifyOrangeBowl</a> <!-- method navigator-link -->
                       </span>
                       <br/>
@@ -165,27 +155,6 @@
               <span class="class-name">test.FruitBowlTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="segregateApples">
-                  </a> <!-- segregateApples -->
-                  <span class="method-name">segregateApples</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="segregateBananas">
-                  </a> <!-- segregateBananas -->
-                  <span class="method-name">segregateBananas</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="segregateOranges">
-                  </a> <!-- segregateOranges -->
-                  <span class="method-name">segregateOranges</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="verifyAppleBowl">
@@ -223,6 +192,13 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="verifyFruitBowl">
+                  </a> <!-- verifyFruitBowl -->
+                  <span class="method-name">verifyFruitBowl</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="verifyOrangeBowl">
                   </a> <!-- verifyOrangeBowl -->
                   <span class="method-name">verifyOrangeBowl</span>
@@ -233,7 +209,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Acer\AppData\Local\Temp\testng-eclipse-215525639\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Acer\AppData\Local\Temp\testng-eclipse--1901509601\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -282,48 +258,40 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(9);
+data.addRows(7);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'segregateApples')
+data.setCell(0, 1, 'verifyAppleBowl')
 data.setCell(0, 2, 'test.FruitBowlTest')
-data.setCell(0, 3, 4);
+data.setCell(0, 3, 8);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyAppleBowl')
+data.setCell(1, 1, 'verifyBananaBowl')
 data.setCell(1, 2, 'test.FruitBowlTest')
-data.setCell(1, 3, 3);
+data.setCell(1, 3, 1);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyOrangeBowl')
+data.setCell(2, 1, 'verifyCountofOranges')
 data.setCell(2, 2, 'test.FruitBowlTest')
-data.setCell(2, 3, 2);
+data.setCell(2, 3, 0);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'verifyCountofApples')
 data.setCell(3, 2, 'test.FruitBowlTest')
-data.setCell(3, 3, 1);
+data.setCell(3, 3, 0);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'segregateOranges')
+data.setCell(4, 1, 'verifyFruitBowl')
 data.setCell(4, 2, 'test.FruitBowlTest')
-data.setCell(4, 3, 1);
+data.setCell(4, 3, 0);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'verifyCountofOranges')
+data.setCell(5, 1, 'verifyOrangeBowl')
 data.setCell(5, 2, 'test.FruitBowlTest')
-data.setCell(5, 3, 1);
+data.setCell(5, 3, 0);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'segregateBananas')
+data.setCell(6, 1, 'verifyCountofBananas')
 data.setCell(6, 2, 'test.FruitBowlTest')
-data.setCell(6, 3, 1);
-data.setCell(7, 0, 7)
-data.setCell(7, 1, 'verifyCountofBananas')
-data.setCell(7, 2, 'test.FruitBowlTest')
-data.setCell(7, 3, 1);
-data.setCell(8, 0, 8)
-data.setCell(8, 1, 'verifyBananaBowl')
-data.setCell(8, 2, 'test.FruitBowlTest')
-data.setCell(8, 3, 0);
+data.setCell(6, 3, 0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 ms</span>
+              <span class="suite-total-time">Total running time: 9 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -350,45 +318,33 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">test.FruitBowlTest</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">addFruits</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">segregateApples</span>
-                <span class="method-start">10 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">segregateBananas</span>
-                <span class="method-start">17 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">segregateOranges</span>
-                <span class="method-start">19 ms</span>
-              </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyAppleBowl</span>
-                <span class="method-start">20 ms</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyBananaBowl</span>
-                <span class="method-start">24 ms</span>
+                <span class="method-start">10 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyCountofApples</span>
-                <span class="method-start">25 ms</span>
+                <span class="method-start">12 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyCountofBananas</span>
-                <span class="method-start">26 ms</span>
+                <span class="method-start">13 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyCountofOranges</span>
-                <span class="method-start">27 ms</span>
+                <span class="method-start">14 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifyFruitBowl</span>
+                <span class="method-start">15 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyOrangeBowl</span>
-                <span class="method-start">29 ms</span>
+                <span class="method-start">16 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
