--- a/immersionFruitBowl/test-output/old/Default suite/classes.html
+++ b/immersionFruitBowl/test-output/old/Default suite/classes.html
@@ -15,10 +15,6 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>segregateOranges</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>verifyAppleBowl</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -39,19 +35,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>segregateBananas</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>segregateApples</td>
+<td>verifyFruitBowl</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>addFruits</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
