--- a/immersionFruitBowl/test-output/old/Default suite/methods-alphabetical.html
+++ b/immersionFruitBowl/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6a70ef">  <td>21/07/07 11:26:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FruitBowlTest.addFruits()[pri:0, instance:test.FruitBowlTest@3e6ef8ad]">&gt;&gt;addFruits</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1670546046</td>   <td></td> </tr>
-<tr bgcolor="6a70ef">  <td>21/07/07 11:26:37</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.segregateApples()[pri:0, instance:test.FruitBowlTest@3e6ef8ad]">segregateApples</td> 
-  <td>main@1670546046</td>   <td></td> </tr>
-<tr bgcolor="6a70ef">  <td>21/07/07 11:26:37</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.segregateBananas()[pri:0, instance:test.FruitBowlTest@3e6ef8ad]">segregateBananas</td> 
-  <td>main@1670546046</td>   <td></td> </tr>
-<tr bgcolor="6a70ef">  <td>21/07/07 11:26:37</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.segregateOranges()[pri:0, instance:test.FruitBowlTest@3e6ef8ad]">segregateOranges</td> 
-  <td>main@1670546046</td>   <td></td> </tr>
-<tr bgcolor="6a70ef">  <td>21/07/07 11:26:37</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.verifyAppleBowl()[pri:0, instance:test.FruitBowlTest@3e6ef8ad]">verifyAppleBowl</td> 
-  <td>main@1670546046</td>   <td></td> </tr>
-<tr bgcolor="6a70ef">  <td>21/07/07 11:26:37</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.verifyBananaBowl()[pri:0, instance:test.FruitBowlTest@3e6ef8ad]">verifyBananaBowl</td> 
-  <td>main@1670546046</td>   <td></td> </tr>
-<tr bgcolor="6a70ef">  <td>21/07/07 11:26:37</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.verifyCountofApples()[pri:0, instance:test.FruitBowlTest@3e6ef8ad]">verifyCountofApples</td> 
-  <td>main@1670546046</td>   <td></td> </tr>
-<tr bgcolor="6a70ef">  <td>21/07/07 11:26:37</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.verifyCountofBananas()[pri:0, instance:test.FruitBowlTest@3e6ef8ad]">verifyCountofBananas</td> 
-  <td>main@1670546046</td>   <td></td> </tr>
-<tr bgcolor="6a70ef">  <td>21/07/07 11:26:37</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.verifyCountofOranges()[pri:0, instance:test.FruitBowlTest@3e6ef8ad]">verifyCountofOranges</td> 
-  <td>main@1670546046</td>   <td></td> </tr>
-<tr bgcolor="6a70ef">  <td>21/07/07 11:26:37</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.verifyOrangeBowl()[pri:0, instance:test.FruitBowlTest@3e6ef8ad]">verifyOrangeBowl</td> 
-  <td>main@1670546046</td>   <td></td> </tr>
+<tr bgcolor="6a70ef">  <td>21/07/08 17:16:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.verifyAppleBowl()[pri:0, instance:test.FruitBowlTest@87a85e1]">verifyAppleBowl</td> 
+  <td>main@1063980005</td>   <td></td> </tr>
+<tr bgcolor="6a70ef">  <td>21/07/08 17:16:30</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.verifyBananaBowl()[pri:0, instance:test.FruitBowlTest@87a85e1]">verifyBananaBowl</td> 
+  <td>main@1063980005</td>   <td></td> </tr>
+<tr bgcolor="6a70ef">  <td>21/07/08 17:16:30</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.verifyCountofApples()[pri:0, instance:test.FruitBowlTest@87a85e1]">verifyCountofApples</td> 
+  <td>main@1063980005</td>   <td></td> </tr>
+<tr bgcolor="6a70ef">  <td>21/07/08 17:16:30</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.verifyCountofBananas()[pri:0, instance:test.FruitBowlTest@87a85e1]">verifyCountofBananas</td> 
+  <td>main@1063980005</td>   <td></td> </tr>
+<tr bgcolor="6a70ef">  <td>21/07/08 17:16:30</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.verifyCountofOranges()[pri:0, instance:test.FruitBowlTest@87a85e1]">verifyCountofOranges</td> 
+  <td>main@1063980005</td>   <td></td> </tr>
+<tr bgcolor="6a70ef">  <td>21/07/08 17:16:30</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.verifyFruitBowl()[pri:0, instance:test.FruitBowlTest@87a85e1]">verifyFruitBowl</td> 
+  <td>main@1063980005</td>   <td></td> </tr>
+<tr bgcolor="6a70ef">  <td>21/07/08 17:16:30</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FruitBowlTest.verifyOrangeBowl()[pri:0, instance:test.FruitBowlTest@87a85e1]">verifyOrangeBowl</td> 
+  <td>main@1063980005</td>   <td></td> </tr>
 </table>
